modification de sonar sur jenkinsfile

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,18 +26,11 @@ stage('Unit Test') {
         }
       }
     }
-
-  stage('SonarQube Analysis') {
-    steps {
-        script {
-            // Ensure 'scanner' matches the name configured in Jenkins
-            def scannerHome = tool 'scanner'
-            withSonarQubeEnv('SonarQube') { // Ensure 'SonarQube' matches the server name in Jenkins
-                sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=nodeapp -Dsonar.sources=."
-            }
-        }
-    }
+withSonarQubeEnv('scanner') { 
+    sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=nodeapp -Dsonar.sources=."
 }
+
+
 stage('Build application') {
       steps{
         
