--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     image: mongo:4.2
     container_name: db
     restart: always
-
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -14,7 +13,10 @@ services:
       - ./data/dump:/dump
 
   app:
-    build: .
+    build:
+      context: .
+      args:
+        NPM_REGISTRY: https://registry.npm.taobao.org
     image: 192.168.33.10:8083/nodemongoapp:6.0
     restart: always
     container_name: back
@@ -22,5 +24,6 @@ services:
       - '5000:5000'
     depends_on:
       - db
+
 volumes:
   mongo-data:
